fix jumping; remove vh units; replace with media screens

--- a/src/stylesSass/4-modules/_image-containers.sass
+++ b/src/stylesSass/4-modules/_image-containers.sass
@@ -1,8 +1,7 @@
 // showcase
 .hero-image
     position: relative
-    height: 100%
-
+    height: 16rem
 .hero-image img
     width: 100%
     height: 100%
@@ -11,7 +10,8 @@
 
 .showcase-image
     position: relative
-    height: 60vh
+    height: 16rem
+
 .showcase-image img
     width: 100%
     height: 100%
@@ -52,7 +52,7 @@ img.image-top
     color: white
     background-color: $green
     padding: 0
-    height: 15vh
+    height: 80px
     min-height: 70px
     width: 100%
     display: none
