--- a/src/stylesSass/5-templates/_media-screen.sass
+++ b/src/stylesSass/5-templates/_media-screen.sass
@@ -1,6 +1,32 @@
-@media screen and (min-height: 500px)
+@media screen and (min-height: 450px) and (max-width: 700px)
+    .hero-image,
+    .showcase-image
+        height: 18rem
+
+@media screen and (min-height: 500px) and (max-width: 700px)
     .menu-content
         top: 20%
+
+    .hero-image,
+    .showcase-image
+        height: 20rem
+
+@media screen and (min-height: 550px) and (max-width: 700px)
+    .hero-image,
+    .showcase-image
+        height: 22rem
+@media screen and (min-height: 600px) and (max-width: 700px)
+    .hero-image,
+    .showcase-image
+        height: 24rem
+@media screen and (min-height: 650px) and (max-width: 700px)
+    .hero-image,
+    .showcase-image
+        height: 26rem
+@media screen and (min-height: 700px) and (max-width: 700px)
+    .hero-image,
+    .showcase-image
+        height: 28rem
 
 @media screen and (min-width: 700px)
     .grid
@@ -28,6 +54,9 @@
     .hero-image
         height: 70vh
 
+    .showcase-image
+        height: 60vh
+
     .section-a
         padding: 1em
     
@@ -51,7 +80,7 @@
         flex-basis: auto
         display: inline-flex
         background: transparent
-        align-items: flex-start
+        align-items: center
     
     #menu ul
         display: inline-flex
@@ -68,7 +97,7 @@
         display: none
 
     .menu-content
-        padding-top: 0
+        top: 0
 
     .menu-link
         color: white
