--- a/styles/main.css
+++ b/styles/main.css
@@ -404,7 +404,7 @@ a.toggle:hover {
 
 .hero-image {
   position: relative;
-  height: 100%;
+  height: 16rem;
 }
 
 .hero-image img {
@@ -416,7 +416,7 @@ a.toggle:hover {
 
 .showcase-image {
   position: relative;
-  height: 60vh;
+  height: 16rem;
 }
 
 .showcase-image img {
@@ -463,7 +463,7 @@ img.image-top {
   color: white;
   background-color: #87c5be;
   padding: 0;
-  height: 15vh;
+  height: 80px;
   min-height: 70px;
   width: 100%;
   display: none;
@@ -534,9 +534,44 @@ img.image-top {
   background-color: #fab65e;
 }
 
-@media screen and (min-height: 500px) {
+@media screen and (min-height: 450px) and (max-width: 700px) {
+  .hero-image,
+.showcase-image {
+    height: 18rem;
+  }
+}
+@media screen and (min-height: 500px) and (max-width: 700px) {
   .menu-content {
     top: 20%;
+  }
+
+  .hero-image,
+.showcase-image {
+    height: 20rem;
+  }
+}
+@media screen and (min-height: 550px) and (max-width: 700px) {
+  .hero-image,
+.showcase-image {
+    height: 22rem;
+  }
+}
+@media screen and (min-height: 600px) and (max-width: 700px) {
+  .hero-image,
+.showcase-image {
+    height: 24rem;
+  }
+}
+@media screen and (min-height: 650px) and (max-width: 700px) {
+  .hero-image,
+.showcase-image {
+    height: 26rem;
+  }
+}
+@media screen and (min-height: 700px) and (max-width: 700px) {
+  .hero-image,
+.showcase-image {
+    height: 28rem;
   }
 }
 @media screen and (min-width: 700px) {
@@ -570,6 +605,10 @@ img.image-top {
     height: 70vh;
   }
 
+  .showcase-image {
+    height: 60vh;
+  }
+
   .section-a {
     padding: 1em;
   }
@@ -597,7 +636,7 @@ img.image-top {
     flex-basis: auto;
     display: inline-flex;
     background: transparent;
-    align-items: flex-start;
+    align-items: center;
   }
 
   #menu ul {
@@ -618,7 +657,7 @@ img.image-top {
   }
 
   .menu-content {
-    padding-top: 0;
+    top: 0;
   }
 
   .menu-link {
